[package]
name = "rust-box"
version = "0.11.0"
authors = ["try <trywen@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box"
homepage = "https://github.com/try-box/rust-box"
description = "This crate provides an odd set of tools for Rust programming"
keywords = ["stream", "sink", "task", "event", "collections"]
exclude = ["examples"]


[features]
default = []
full = ["queue-ext", "stream-ext", "task-exec-queue", "event", "std-ext", "mpsc", "dequemap", "stream-ext-leaky-bucket",
    "stream-ext-governor", "task-exec-queue-rate", "mpsc-segqueue", "mpsc-vecdeque", "mpsc-indexmap", "mpsc-priority",
    "dequemap-std", "dequemap-serde", "dequemap-btreemap", "handy-grpc", "handy-grpc-reuse", "collections", "collections-std",
    "collections-serde", "collections-binary-heap", "collections-priority-queue", "counter", "counter-rate", "counter-count",
    "convert", "convert-bytesize"]

stream-ext-leaky-bucket = ["stream-ext/leaky-bucket"]
stream-ext-governor = ["stream-ext/governor"]
task-exec-queue-rate = ["task-exec-queue/rate"]
event = ["event-notify"]

mpsc-segqueue = ["mpsc/segqueue"]
mpsc-vecdeque = ["mpsc/vecdeque"]
mpsc-indexmap = ["mpsc/indexmap"]
mpsc-priority = ["mpsc/priority"]

dequemap-std = ["dequemap/std"]
dequemap-serde = ["dequemap/serde"]
dequemap-btreemap = ["dequemap/btreemap"]
dequemap-hashmap = ["dequemap/hashmap"]

collections-std = ["collections/std"]
collections-serde = ["collections/serde"]
collections-binary-heap = ["collections/binary-heap"]
collections-priority-queue = ["collections/priority-queue"]

handy-grpc-reuse = ["handy-grpc/reuse"]

counter-rate = ["counter/rate"]
counter-count = ["counter/count"]

convert-bytesize = ["convert/bytesize"]

[dependencies]
queue-ext = { version = "0.4.1", path = "./queue-ext", optional = true }
stream-ext = { version = "0.2.4", path = "./stream-ext", optional = true }
task-exec-queue = { version = "0.9.0", path = "./task-exec-queue", optional = true }
event-notify = { version = "0.1.1", path = "./event", optional = true }
std-ext = { version = "0.2.2", path = "./std-ext", optional = true }
mpsc = { version = "0.2.3", path = "./mpsc", optional = true }
dequemap = { version = "0.2.0", path = "./dequemap", optional = true }
handy-grpc = { version = "0.1.3", path = "./handy-grpc", optional = true }
collections = { package = "box-collections", version = "0.1.0", path = "./collections", optional = true }
counter = { package = "box-counter", version = "0.1.0", path = "./counter", optional = true }
convert = { package = "convert", version = "0.1.0", path = "./convert", optional = true }


[workspace]
members = [
    ".",
    "queue-ext",
    "stream-ext",
    "task-exec-queue",
    "event",
    "std-ext",
    "mpsc",
    "dequemap",
    "handy-grpc",
    "collections",
    "counter",
    "convert"
]

[patch.crates-io]
stream-ext = { path = "stream-ext" }
queue-ext = { path = "queue-ext" }
task-exec-queue = { path = "task-exec-queue" }
event-notify = { path = "event" }
std-ext = { path = "std-ext" }
mpsc = { path = "mpsc" }
dequemap = { path = "dequemap" }
handy-grpc = { path = "handy-grpc" }
collections = {package = "box-collections", path = "collections" }
counter = {package = "box-counter", path = "counter" }
convert = {package = "convert", path = "convert" }
