[package]
name = "box-collections"
version = "0.2.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/collections"
homepage = "https://github.com/try-box/rust-box/tree/main/collections"
description = "A no_std compatible implementation of the collection crate"
keywords = ["collections", "no_std"]
categories = ["data-structures", "no-std"]

[features]
default = ["std"]
std = []
binary-heap = []
priority-queue = []

[dependencies]
std-ext = { version = "0.3", path = "../std-ext" }
serde = { version = "1.0", optional = true, default-features = false}

[dev-dependencies]
bincode = "1.3"

[package.metadata.docs.rs]
features = ["serde"]



