[package]
name = "box-counter"
version = "0.1.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/counter"
homepage = "https://github.com/try-box/rust-box/tree/main/counter"
description = "counter"
keywords = ["counter"]
categories = []

[features]
default = []
count = []
rate = []

[dependencies]
futures = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
