[package]
name = "dequemap"
version = "0.1.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/dequemap"
homepage = "https://github.com/try-box/rust-box/tree/main/dequemap"
description = "dequemap"
keywords = ["deque", "map", "dequemap"]
categories = []

[features]
default = ["std"]
std = []

[dependencies]




