[package]
name = "dequemap"
version = "0.1.3"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/dequemap"
homepage = "https://github.com/try-box/rust-box/tree/main/dequemap"
description = "A no_std compatible implementation of the dequemap crate"
keywords = ["deque", "map", "no_std"]
categories = ["data-structures", "no-std"]

[features]
default = ["std", "btreemap"]
std = []
btreemap = []
hashmap = ["hashbrown"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false}
hashbrown = { version = "0.14", optional = true, default-features = false, features = ["ahash"]}

[dev-dependencies]
bincode = "1.3"

[package.metadata.docs.rs]
features = ["serde"]



