[package]
name = "event-notify"
version = "0.1.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.38"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/event-notify"
homepage = "https://github.com/try-box/rust-box/tree/main/event-notify"
description = "Event notify"
keywords = ["event", "notify"]
categories = []

[dependencies]

