[package]
name = "event-notify"
version = "0.1.1"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/event"
homepage = "https://github.com/try-box/rust-box/tree/main/event"
description = "Event notify"
keywords = ["event", "notify"]
categories = []

[dependencies]

