[package]
name = "examples"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stream-ext-test"
path = "src/stream-ext-test.rs"

[[bin]]
name = "queue-ext-test"
path = "src/queue-ext-test.rs"

[[bin]]
name = "task-executor-test"
path = "src/task-executor-test.rs"

[dependencies]
rust-box = { path = "../", features = ["stream-ext-leaky-bucket", "stream-ext-governor", "task-executor-rate"] }

futures = "0.3"
futures-lite = "1.12"
futures-util = "0.3"
linked-hash-map = "0.5"
log = "0.4"
env_logger = "0.8.4"
parking_lot = "0.12"
crossbeam-queue = "0.3"
leaky-bucket = "0.12"
governor = "0.4"
nonzero_ext = { version = "0.3.0", default-features = false }

async-std = { version = "1.12", features = ["attributes", "unstable"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"] }

[workspace]