[package]
name = "examples"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "stream-ext-test"
path = "src/stream-ext-test.rs"

[[bin]]
name = "queue-ext-test"
path = "src/queue-ext-test.rs"

[[bin]]
name = "task-exec-queue-test"
path = "src/task-exec-queue-test.rs"

[[bin]]
name = "event-test"
path = "src/event-test.rs"

[[bin]]
name = "std-ext-test"
path = "src/std-ext-test.rs"

[[bin]]
name = "channel-test"
path = "src/channel-test.rs"

[dependencies]
rust-box = { path = "../", features = ["full"] }

futures = "0.3"
futures-lite = "1.12"
futures-util = "0.3"
linked-hash-map = "0.5"
indexmap = { version = "1.9", features = ["std"] }
fxhash = "0.2.1"
log = "0.4"
env_logger = "0.8.4"
parking_lot = "0.12"
crossbeam-queue = "0.3"
leaky-bucket = "0.12"
governor = "0.4"
nonzero_ext = { version = "0.3.0", default-features = false }

async-std = { version = "1.12", features = ["attributes", "unstable"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"] }

[workspace]