[package]
name = "examples"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "stream-ext-test"
path = "src/stream-ext-test.rs"

[[bin]]
name = "queue-ext-test"
path = "src/queue-ext-test.rs"

[[bin]]
name = "task-exec-queue-test"
path = "src/task-exec-queue-test.rs"

[[bin]]
name = "event-test"
path = "src/event-test.rs"

[[bin]]
name = "std-ext-test"
path = "src/std-ext-test.rs"

[[bin]]
name = "channel-test"
path = "src/channel-test.rs"

[[bin]]
name = "dequemap-test"
path = "src/dequemap-test.rs"

[[bin]]
name = "counter-test"
path = "src/counter-test.rs"


[dependencies]
rust-box = { path = "../", features = ["full"] }

futures = "0.3"
futures-lite = "1.12"
futures-util = "0.3"
indexmap = { version = "1.9", features = ["std"] }
log = "0.4"
env_logger = "0.8.4"
parking_lot = "0.12"
crossbeam-queue = "0.3"
leaky-bucket = "1.0"
governor = "0.6"
nonzero_ext = { version = "0.3.0", default-features = false }
rand = "0.8.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
time =  { version = "0.3.29", features = ["local-offset"] }



async-std = { version = "1.12", features = ["attributes", "unstable"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"] }

[workspace]