[package]
name = "handy-grpc"
version = "0.1.2"
edition = "2021"
authors = ["try <trywen@qq.com>"]
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/handy-grpc"
homepage = "https://github.com/try-box/rust-box/tree/main/handy-grpc"
description = "Handy gRPC"
keywords = ["rpc", "grpc", "tonic"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rate = ["update_rate"]
rate_print = ["rate"]
reuse = ["reuseport", "reuseaddr"]
reuseport = ["socket2", "tokio-stream"]
reuseaddr = ["socket2", "tokio-stream"]


[dependencies]
mpsc = { version = "0.2", path = "../mpsc", default-features = false, features = ["priority"] }
collections = { package = "box-collections", version = "0.1", path = "../collections" , default-features = false, features = ["priority-queue"] }
tokio = { version = "1", default-features = false, features = ["time"] }
tonic = { version = "0.9", features = ["tls"] }
prost = "0.11"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
log = "0.4"
anyhow = "1"
update_rate = { version = "2", optional = true }
once_cell = "1"
parking_lot = "0.12"

socket2 = { version = "0.5", features = ["all"], optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["net", "rt-multi-thread", "sync"] }
env_logger = "0.8"

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }

