[package]
name = "handy-grpc"
version = "0.5.0"
edition = "2021"
authors = ["try <trywen@qq.com>"]
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/handy-grpc"
homepage = "https://github.com/try-box/rust-box/tree/main/handy-grpc"
description = "Handy gRPC"
keywords = ["rpc", "grpc", "tonic"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rate_print = ["rate"]
reuse = ["reuseport", "reuseaddr"]
reuseport = ["socket2"]
reuseaddr = ["socket2"]


[dependencies]
mpsc = { version = "0.2", path = "../mpsc", default-features = false, features = ["priority"] }
collections = { package = "box-collections", version = "0.2", path = "../collections" , default-features = false, features = ["priority-queue"] }
dequemap = { version = "0.2", path = "../dequemap", default-features = false, features = ["btreemap"] }

tokio = { version = "1", default-features = false, features = ["time"] }
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
log = "0.4"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6.1.0"
ahash = "0.8"
scopeguard = "1"


rate = { package = "box-counter", version = "0.3", path = "../counter", default-features = false, features = ["rate"], optional = true }
socket2 = { version = "0.5", features = ["all"], optional = true }


[target.'cfg(not(windows))'.dependencies]
tonic = { version = "0.13", features = ["prost", "tls-aws-lc"] }
[target.'cfg(windows)'.dependencies]
tonic = { version = "0.13", features = ["prost", "tls-ring"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["net", "rt-multi-thread", "sync"] }
env_logger = "0.11"
rand = "0.9.0"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
