[package]
name = "mpsc"
version = "0.2.3"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/mpsc"
homepage = "https://github.com/try-box/rust-box/tree/main/mpsc"
description = "mpsc channel"
keywords = ["mpsc", "channel"]
categories = []

[features]
default = ["segqueue"]
segqueue = ["crossbeam-queue"]
vecdeque = []
priority = ["collections"]

[dependencies]
std-ext = { version = "0.2", path = "../std-ext" }
queue-ext = { version = "0.4", path = "../queue-ext" }
futures = "0.3"
rand = "0.8"
dashmap = "5.5"
ahash = "0.8"
log = "0.4"

crossbeam-queue = { version = "0.3", optional = true }
indexmap = { version = "1.9", features = ["std"], optional = true }
collections = { package = "box-collections", version = "0.1", path = "../collections", features = ["std", "priority-queue"], optional = true }



