[package]
name = "mpsc"
version = "0.2.4"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/mpsc"
homepage = "https://github.com/try-box/rust-box/tree/main/mpsc"
description = "mpsc channel"
keywords = ["mpsc", "channel"]
categories = []

[features]
default = ["segqueue"]
segqueue = ["crossbeam-queue"]
vecdeque = []
priority = ["box-collections"]

[dependencies]
std-ext.workspace = true
queue-ext.workspace = true

futures = "0.3"
rand = "0.8"
dashmap = "6.1"
ahash = "0.8"
log = "0.4"
parking_lot = "0.12"

crossbeam-queue = { version = "0.3", optional = true }
indexmap = { version = "1.9", features = ["std"], optional = true }
box-collections = {workspace = true, features = ["std", "priority-queue"], optional = true }



