[package]
name = "queue-ext"
version = "0.4.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
rust-version = "1.47"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/queue-ext"
homepage = "https://github.com/try-box/rust-box/tree/main/queue-ext"
description = "The extended feature of the queue can convert the pop() function of the queue to Stream and the push() function to Sender."
keywords = ["queue", "stream", "sender"]
categories = ["algorithms", "concurrency", "data-structures"]

[dependencies]
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
pin-project = "1"