[package]
name = "stream-ext"
version = "0.1.0"
edition = "2018"
rust-version = "1.38"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
futures = "0.3"
log = "0.4"
leaky-bucket = { version = "0.12", optional = true }
governor = { version = "0.4", optional = true }