[package]
name = "stream-ext"
version = "0.1.0"
edition = "2018"
rust-version = "1.38"
license = "MIT OR Apache-2.0"
repository = "https://github.com/try-box/rust-box/tree/main/stream-ext"
homepage = "https://github.com/try-box/rust-box/tree/main/stream-ext"
description = "An extension trait for Streams that provides a variety of convenient combinator functions"
keywords = ["stream", "limiter", "ratelimiter"]

[features]
default = []

[dependencies]
futures = "0.3"
log = "0.4"
leaky-bucket = { version = "0.12", optional = true }
governor = { version = "0.4", optional = true }