[package]
name = "task-exec-queue"
version = "0.8.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
description = "A asynchronous task execution queue"
repository = "https://github.com/try-box/rust-box/tree/main/task-exec-queue"
homepage = "https://github.com/try-box/rust-box/tree/main/task-exec-queue"
license = "MIT OR Apache-2.0"
keywords = ["task", "queue", "tokio", "async-std"]
categories = ["asynchronous", "concurrency"]

exclude = [
    "examples/*",
    "Cargo.lock",
]

[features]
default = []
rate = ["rate-counter"]

[dependencies]
queue-ext = { version = "0.4", path = "../queue-ext" }
mpsc = { version = "0.2", path = "../mpsc" }
futures = "0.3"
futures-lite = "1.12"
log = "0.4"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.10"
dashmap = "5.4"
ahash = "0.8"
crossbeam-queue = "0.3"
rate-counter = { package = "box-counter", version = "0.1", path = "../counter", features = ["rate"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
