[package]
name = "task-executor"
version = "0.2.0"
authors = ["try <trywen@qq.com>"]
edition = "2018"
description = "A task executor"
readme = "README.md"
repository = "https://github.com/try-box/rust-box/tree/main/task-executor"
homepage = "https://github.com/try-box/rust-box/tree/main/task-executor"
license = "MIT OR Apache-2.0"
keywords = ["task", "executor", "tokio", "async-std"]

exclude = [
    "examples/*",
    "Cargo.lock",
]

[features]
default = []
rate = ["update_rate"]

[dependencies]
queue-ext = { version = "0.2", path = "../queue-ext" }
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
crossbeam-queue = "0.3"
parking_lot = "0.12"
update_rate = { version = "2.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
