[package]
name = "task-executor"
version = "0.3.3"
authors = ["try <trywen@qq.com>"]
edition = "2018"
description = "A task executor"
repository = "https://github.com/try-box/rust-box/tree/main/task-executor"
homepage = "https://github.com/try-box/rust-box/tree/main/task-executor"
license = "MIT OR Apache-2.0"
keywords = ["task", "executor", "tokio", "async-std"]
categories = ["asynchronous", "concurrency"]

exclude = [
    "examples/*",
    "Cargo.lock",
]

[features]
default = []
rate = ["update_rate"]

[dependencies]
queue-ext = { version = "0.3", path = "../queue-ext" }
futures = "0.3"
futures-lite = "1.12"
log = "0.4"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.10"
dashmap = "5.4"
ahash = "0.8"
update_rate = { version = "2.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
